Fixed some centering/alignment things, also moved menu back to left

--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,21 @@
 body {
-	max-width: 960px;
+	/*max-width: 960px;*/
 }
 
 /* NAVBAR */
-.navbar-wrapper {
-	max-width: 960px;
-	margin: 0 auto;
-}
 
 /* Hero Unit */
 .jumbotron {
-	max-width: 1000px;
 	margin: 0 auto;
 	background-color: #fff;
-	padding: 80px 0 0 80px !important;
+	padding: 80px 0 0 0 !important;
 	text-align: center;
-}
-
-.col-sm-3 {
-	margin-right: 20px;
 }
 
 /* main */
 .main {
 	text-align: center;
-	padding: 40px 0 0 300px;
+	padding: 40px 0 0 0px;
 }
 
 /* Media Queries */
@@ -33,9 +24,6 @@ body {
 @media screen and (max-width: 768px) {
 	.main {
 		padding: 0px;
-	}
-	.jumbotron {
-		padding-left: 0px !important;
 	}
 }
 @media screen and (max-width: 500px) {
